# autom8

./: Cargo.toml
examples/: basic.rs  extract.rs  screenshot.rs
src/: assertions.rs  bot.rs  browser.rs  error.rs  extract.rs  input.rs  lib.rs  local_storage.rs  nav.rs  screenshot.rs
