[package]
name = "autom8"
version = "0.1.0"
edition = "2021"
authors = ["Taha Hachana <tahahachana@gmail.com>"]
description = "High level browser automation built on the webdriverbidi crate."
license = "MIT"
repository = "https://github.com/TahaHachana/autom8"

[dependencies]
thiserror = "2.0.9"
webdriverbidi = "0.1.13"
log = "0.4.22"
base64 = "0.22.1"

[dev-dependencies]
tokio = "1.42.0"
anyhow = "1.0"
