[package]
name = "autom8"
version = "0.1.2"
edition = "2024"
authors = ["Taha Hachana <tahahachana@gmail.com>"]
description = "High level browser automation built on the webdriverbidi crate."
license = "MIT"
repository = "https://github.com/TahaHachana/autom8"

[dependencies]
thiserror = "2.0.12"
webdriverbidi = "0.2.2"
log = "0.4.27"
base64 = "0.22.1"
tokio = { version = "1.47.1", features = ["sync", "time"] }
serde_json = "1.0.142"

[dev-dependencies]
tokio = "1.47.1"
anyhow = "1.0.98"
